--- a/ProjectsDS/Week2/day2/exercises/Exercises_1-8.ipynb
+++ b/ProjectsDS/Week2/day2/exercises/Exercises_1-8.ipynb
@@ -32,30 +32,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here\n",
-    "numero_bridge = 15"
+    "#your code here"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Crea una variable llamada `nombre_calle` que sea un string y sea **Recoletos**\n",
+    "2. Crea una variable llamada `nombre_calle`que sea un string y sea **Recoletos**\n",
     " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here\n",
-    "nombre_calle = \"Recoletos\""
+    "#your code here"
    ]
   },
   {
@@ -65,19 +63,18 @@
     "3. Crea una variable llamada `gusto_personal` que sea **True** si eres más de playa y **False** si eres más de montaña.\n",
     "```python\n",
     "#Ejemplo: \n",
-    "gusto_personal = False  # Si te gusta más la montaña\n",
-    "gusto_personal = True  # Si te gusta más la playa\n",
+    "gusto_personal = True  # Si te gusta más la montaña\n",
+    "gusto_personal = False  # Si te gusta más la playa\n",
     "``` "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here\n",
-    "gusto_personal = False"
+    "#your code here"
    ]
   },
   {
@@ -89,12 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here\n",
-    "nada = None"
+    "#your code here"
    ]
   },
   {
@@ -106,12 +102,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here\n",
-    "lista_direccion = [numero_bridge, nombre_calle]"
+    "#your code here"
    ]
   },
   {
@@ -127,12 +122,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here\n",
-    "horas_sueno = \"5\""
+    "#your code here"
    ]
   },
   {
@@ -145,19 +139,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here\n",
-    "lista_informacion = [\n",
-    "    numero_bridge, \n",
-    "    nombre_calle,\n",
-    "    gusto_personal,\n",
-    "    nada,\n",
-    "    lista_direccion,\n",
-    "    horas_sueno\n",
-    "    ]"
+    "#your code here"
    ]
   },
   {
@@ -169,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,24 +166,6 @@
     "del nada\n",
     "del lista_direccion\n",
     "del horas_sueno"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
-     },
-     "metadata": {},
-     "execution_count": 19
-    }
-   ],
-   "source": [
-    "lista_informacion"
    ]
   },
   {
@@ -237,36 +205,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
-     },
-     "metadata": {},
-     "execution_count": 20
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lista_informacion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "15:Recoletos\n"
-    }
-   ],
-   "source": [
-    "#your code here\n",
-    "print(str(lista_informacion[0]) + \":\" + lista_informacion[1])"
+    "#your code here"
    ]
   },
   {
@@ -278,36 +221,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
-     },
-     "metadata": {},
-     "execution_count": 22
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lista_informacion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "20\n"
-    }
-   ],
-   "source": [
-    "#your code here\n",
-    "print(lista_informacion[0] + int(lista_informacion[-1]))"
+    "#your code here"
    ]
   },
   {
@@ -319,80 +237,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
-     },
-     "metadata": {},
-     "execution_count": 23
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lista_informacion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "15 : Recoletos : False : 5\n"
-    }
-   ],
-   "source": [
-    "#your code here\n",
-    "print(str(lista_informacion[0]) + \" : \" + lista_informacion[1] + \" : \" + str(lista_informacion[2]) + \" : \" + lista_informacion[-1])"
+    "#your code here"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Accediendo a la lista que ocupa la cuarta posición de `lista_informacion`, muestra por pantalla la suma de lo siguiente. Si en la cuarta posición de tu `lista_informacion` no encuentras una lista, preguntanos:\n",
+    "4. Accediendo a la lista que ocupa la quinta posición de `lista_informacion`, muestra por pantalla la suma de lo siguiente. Si en la quinta posición de tu `lista_informacion` no encuentras una lista, preguntanos:\n",
     "     - La concatenación de los dos elementos. \n",
     "     - La multiplicación del tamaño de la lista y el tamaño del número de caracteres que tiene el nombre de la calle.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
-     },
-     "metadata": {},
-     "execution_count": 25
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lista_informacion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "15Recoletos\n"
-    }
-   ],
-   "source": [
-    "#your code here\n",
-    "\n",
-    "print(str(lista_informacion[4][0]) + lista_informacion[4][1])"
+    "#your code here"
    ]
   },
   {
@@ -406,55 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para resolver los siguientes ejercicios será necesario que definas una función para cada apartado, tú eliges el nombre salvo que se especifique, pero asegúrate de que defines un único argumento/parámetro `lista`, que al llamar a la función se corresponderá con la variable `lista_información`. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def f(lista):\n",
-    "\n",
-    "    f(lista=lista_informacion)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "6\n"
-    }
-   ],
-   "source": [
-    "def suma(a, b):\n",
-    "    print(a + b)\n",
-    "\n",
-    "suma(a=2, b=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "[2, 4]\n"
-    }
-   ],
-   "source": [
-    "lista_i = [2, 4]\n",
-    "def suma(lista):\n",
-    "    print(lista)\n",
-    "\n",
-    "suma(lista=lista_i)"
+    "Para resolver los siguientes ejercicios será necesario que definas una función para cada apartado, tú elige el nombre salvo que se especifique, pero asegúrate de que defines un único parámetro `lista`, que al llamar a la función se corresponderá con la variable `lista_información`. "
    ]
   },
   {
@@ -473,111 +292,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
-     },
-     "metadata": {},
-     "execution_count": 30
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lista_informacion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Me gusta la tranquilidad\n"
-    }
-   ],
-   "source": [
-    "#your code here\n",
-    "\n",
-    "def f_1_5(lista):\n",
-    "    if lista[2] == True:\n",
-    "        print(\"Me gusta ver las carnes al aire libre\")\n",
-    "    elif lista[2] == False:\n",
-    "        print(\"Me gusta la tranquilidad\")\n",
-    "\n",
-    "f_1_5(lista=lista_informacion)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Me gusta la tranquilidad\n"
-    }
-   ],
-   "source": [
-    "def f_1_5(lista):\n",
-    "    if lista[2] == True:\n",
-    "        return \"Me gusta ver las carnes al aire libre\"\n",
-    "    elif lista[2] == False:\n",
-    "        return \"Me gusta la tranquilidad\"\n",
-    "\n",
-    "x = f_1_5(lista=lista_informacion)\n",
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[2, 3, [1]]"
-     },
-     "metadata": {},
-     "execution_count": 45
-    }
-   ],
-   "source": [
-    "l = [2, 3]\n",
-    "\n",
-    "def anade_uno(lista):\n",
-    "    lista.append([1]\n",
-    "\n",
-    "anade_uno(lista=l)\n",
-    "l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "[2, 3, 1, 'X']\n"
-    }
-   ],
-   "source": [
-    "l1 = [2, 3, 1, \"X\"]\n",
-    "\n",
-    "def parte_lista_en_dos(lista):\n",
-    "    lista = lista[0:2]\n",
-    "    return lista\n",
-    "\n",
-    "l1 = parte_lista_en_dos(lista=l1)\n",
-    "print(l1)"
+    "#your code here"
    ]
   },
   {
@@ -589,44 +308,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
-     },
-     "metadata": {},
-     "execution_count": 32
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lista_informacion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Hoy estoy cansado\n"
-    }
-   ],
-   "source": [
-    "#your code here\n",
-    "\n",
-    "def f_1_6(lista):\n",
-    "    horas_sueno_int = int(lista[-1])\n",
-    "    if horas_sueno_int > 7:\n",
-    "        print(\"Hoy me como el mundo\")\n",
-    "    elif horas_sueno_int < 7:\n",
-    "        print(\"Hoy estoy cansado\")\n",
-    "\n",
-    "f_1_6(lista=lista_informacion)"
+    "#your code here"
    ]
   },
   {
@@ -638,23 +324,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "15\nRecoletos\nFalse\nNone\n[15, 'Recoletos']\n5\n"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#your code here\n",
-    "\n",
-    "def f_1_7_recorre(lista):\n",
-    "    for elem in lista:\n",
-    "        print(elem)\n",
-    "\n",
-    "f_1_7_recorre(lista=lista_informacion)\n"
+    "#your code here"
    ]
   },
   {
@@ -666,41 +340,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
-     },
-     "metadata": {},
-     "execution_count": 51
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lista_informacion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "15--> OK\nRecoletos--> OK\nFalse--> OK\nNone--> OK\n[15, 'Recoletos']--> OK\n5--> OK\n"
-    }
-   ],
-   "source": [
-    "#your code here\n",
-    "\n",
-    "def f_1_8_recorre_concatena(lista):\n",
-    "    for elem in lista:\n",
-    "        print(str(elem) + \"--> OK\")\n",
-    "\n",
-    "f_1_8_recorre_concatena(lista=lista_informacion)"
+    "#your code here"
    ]
   },
   {
@@ -712,11 +356,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here\n"
+    "#your code here"
    ]
   },
   {
@@ -1401,7 +1045,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.7.6"
   },
   "mimetype": "text/x-python",
   "name": "python",
