--- a/ProjectsDS/Week3/day1/PracticePython.ipynb
+++ b/ProjectsDS/Week3/day1/PracticePython.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 62,
    "metadata": {
     "tags": []
    },
@@ -205,9 +205,9 @@
     {
      "output_type": "error",
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-37-eba6930f75ce>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-62-eba6930f75ce>, line 1)",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-37-eba6930f75ce>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(n for n in a:[lambda a: a%2])\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-62-eba6930f75ce>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(n for n in a:[lambda a: a%2])\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 61,
    "metadata": {
     "tags": []
    },
@@ -233,6 +233,194 @@
     "\n",
     "b = [elem for elem in a if elem % 2 == 0] \n",
     "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Exercise 14 (and Solution)\n",
+    "Write a program (function!) that takes a list and returns a new list that contains all the elements of the first list minus all the duplicates."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "12\n"
+    }
+   ],
+   "source": [
+    "a = [\"perro\", \"gato\", \"delfin\", \"mono\", \"perro\", \"caballo\", \"vaca\", \"vaca\", \"mono\", \"jirafa\", \"cerdo\", \"caballo\"]\n",
+    "\n",
+    "print(len(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "perro  repetido\ngato  repetido\ndelfin  repetido\nmono  repetido\nperro  repetido\ncaballo  repetido\nvaca  repetido\nvaca  repetido\nmono  repetido\njirafa  repetido\ncerdo  repetido\ncaballo  repetido\n"
+    }
+   ],
+   "source": [
+    "a = [\"perro\", \"gato\", \"delfin\", \"mono\", \"perro\", \"caballo\", \"vaca\", \"vaca\", \"mono\", \"jirafa\", \"cerdo\", \"caballo\"]\n",
+    "b = []\n",
+    "def nuevalista(sindup):\n",
+    "    while elem in a:\n",
+    "        if elem == elem:\n",
+    "            print(elem, \" repetido\")\n",
+    "        else:\n",
+    "            b.append(elem)\n",
+    "            print(b)\n",
+    "\n",
+    "nuevalista(sindup=b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['perro', 'gato', 'delfin', 'mono', 'caballo', 'vaca', 'jirafa', 'cerdo']"
+     },
+     "metadata": {},
+     "execution_count": 38
+    }
+   ],
+   "source": [
+    "a = [\"perro\", \"gato\", \"delfin\", \"mono\", \"perro\", \"caballo\", \"vaca\", \"vaca\", \"mono\", \"jirafa\", \"cerdo\", \"caballo\"]\n",
+    "b = []\n",
+    "\n",
+    "def nuevalista(sindup):\n",
+    "    acum = 0\n",
+    "    while acum <= len(a) - 1:\n",
+    "        if a[acum] not in b:\n",
+    "            b.append(a[acum])\n",
+    "        acum += 1\n",
+    "    return b\n",
+    "\n",
+    "nuevalista(sindup=a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['perro', 'gato', 'delfin', 'mono', 'caballo', 'vaca', 'jirafa', 'cerdo']"
+     },
+     "metadata": {},
+     "execution_count": 40
+    }
+   ],
+   "source": [
+    "a = [\"perro\", \"gato\", \"delfin\", \"mono\", \"perro\", \"caballo\", \"vaca\", \"vaca\", \"mono\", \"jirafa\", \"cerdo\", \"caballo\"]\n",
+    "\n",
+    "def nuevalista(sindup):\n",
+    "    b = []\n",
+    "    for i in a:\n",
+    "        if i not in b:\n",
+    "            b.append(i)\n",
+    "    return b\n",
+    "\n",
+    "nuevalista(sindup=b)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Extras:\n",
+    "\n",
+    "Write two different functions to do this - one using a loop and constructing a list, and another using sets.\n",
+    "Go back and do Exercise 5 using sets, and write the solution for that in a different function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['delfin', 'vaca', 'caballo', 'perro', 'mono', 'jirafa', 'cerdo', 'gato']"
+     },
+     "metadata": {},
+     "execution_count": 60
+    }
+   ],
+   "source": [
+    "a = [\"perro\", \"gato\", \"delfin\", \"mono\", \"perro\", \"caballo\", \"vaca\", \"vaca\", \"mono\", \"jirafa\", \"cerdo\", \"caballo\"]\n",
+    "b = []\n",
+    "\n",
+    "def nuevalista(sindup):    \n",
+    "    return list(set(a))\n",
+    "\n",
+    "nuevalista(sindup=b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[1, 2, 3, 4, 3, 2, 1]\n[1, 2, 3, 4]\n"
+    }
+   ],
+   "source": [
+    "def dedupe_v2(x):\n",
+    "    return list(set(x))\n",
+    "\n",
+    "a = [1,2,3,4,3,2,1]\n",
+    "print(a)\n",
+    "print(dedupe_v2(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "['Robin', 'Michele', 'Sara']\n"
+    }
+   ],
+   "source": [
+    "names = [\"Michele\", \"Robin\", \"Sara\", \"Michele\"]\n",
+    "names = set(names)\n",
+    "names = list(names)\n",
+    "print(names)"
    ]
   },
   {
