--- a/ProjectsDS/Week3/precurse_python/6_import/6_import.ipynb
+++ b/ProjectsDS/Week3/precurse_python/6_import/6_import.ipynb
@@ -4,19 +4,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ficheros"
+    "# Apartado 6 - Import"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "------------------"
+    "- Import modulos\n",
+    "- Abrir ficheros"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import modulos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[HELP](https://realpython.com/python-modules-packages/)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import mi_modulo \n",
+    "\n",
+    "suma = mi_modulo.suma_2(a=2, b=6)\n",
+    "print(suma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resta = mi_modulo.resta_2(a=7, b=6)\n",
+    "resta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mi_modulo import resta_2\n",
+    "\n",
+    "resta2 = resta_2(a=5, b=3)\n",
+    "resta2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import mi_modulo as mm\n",
+    "\n",
+    "mm.resta_2()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Abrir ficheros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,13 +128,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "A string to write\nA string to write 0\nA string to write 1\nA string to write 2\n\n------\n Last Line.\n \n"
+     "output_type": "stream",
+     "text": [
+      "A string to write\n",
+      "A string to write 0\n",
+      "A string to write 1\n",
+      "A string to write 2\n",
+      "\n",
+      "------\n",
+      " Last Line.\n",
+      " \n"
+     ]
     }
    ],
    "source": [
@@ -64,13 +154,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "<class 'str'>\nA string to write\n\n"
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "A string to write\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -82,13 +176,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "A string to write\n\nA string to write 0\n\nA string to write 1\n\nA string to write 2\n\n\n\n------\n\n Last Line.\n\n \n- linea: \n"
+     "output_type": "stream",
+     "text": [
+      "A string to write\n",
+      "\n",
+      "A string to write 0\n",
+      "\n",
+      "A string to write 1\n",
+      "\n",
+      "A string to write 2\n",
+      "\n",
+      "\n",
+      "\n",
+      "------\n",
+      "\n",
+      " Last Line.\n",
+      "\n",
+      " \n",
+      "- linea: \n"
+     ]
     }
    ],
    "source": [
@@ -108,13 +219,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Se ha escrito\nPrimera\n\nSegunda\n\nTercera\n\n"
+     "output_type": "stream",
+     "text": [
+      "Se ha escrito\n",
+      "Primera\n",
+      "\n",
+      "Segunda\n",
+      "\n",
+      "Tercera\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -127,18 +246,25 @@
     "    linea = new_file.readline()\n",
     "    print(linea)\n",
     "    print(new_file.readline())\n",
-    "    print(new_file.readline())\n"
+    "    print(new_file.readline())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "A string to write\n\nA string to write 0\n\nA string to write 1\n\n"
+     "output_type": "stream",
+     "text": [
+      "A string to write\n",
+      "\n",
+      "A string to write 0\n",
+      "\n",
+      "A string to write 1\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -154,15 +280,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Nombre:  Ester \nDinero:   20000\n\n----------\nNombre:  Gabriel \nDinero:   20\n\n----------\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('file_to_save.txt', 'r') as open_file:\n",
     "    line = open_file.readline()\n",
@@ -179,13 +299,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "YES\n"
+     "output_type": "stream",
+     "text": [
+      "YES\n"
+     ]
     }
    ],
    "source": [
@@ -197,13 +319,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "A\n \ns\nt\nr\ni\nn\ng\n \nt\no\n \nw\nr\ni\nt\ne\n \n"
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      " \n",
+      "s\n",
+      "t\n",
+      "r\n",
+      "i\n",
+      "n\n",
+      "g\n",
+      " \n",
+      "t\n",
+      "o\n",
+      " \n",
+      "w\n",
+      "r\n",
+      "i\n",
+      "t\n",
+      "e\n",
+      " \n"
+     ]
     }
    ],
    "source": [
@@ -216,14 +357,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`split`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "['hello', 'my name is Peter', 'I am 26 years old']\n"
+     "output_type": "stream",
+     "text": [
+      "['hello', 'my name is Peter', 'I am 26 years old']\n"
+     ]
     }
    ],
    "source": [
@@ -243,26 +393,24 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "version": "3.6.4-final"
-  },
-  "orig_nbformat": 2,
-  "file_extension": ".py",
-  "mimetype": "text/x-python",
-  "name": "python",
-  "npconvert_exporter": "python",
-  "pygments_lexer": "ipython3",
-  "version": 3,
-  "kernelspec": {
-   "name": "python36464bitc2077ed07ea84d23aa5b518d224882ab",
-   "display_name": "Python 3.6.4 64-bit"
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
